--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --watch index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5"
   },
   "license": "MIT"
 }
